// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows deselect 1`] = `
<div
  className="input select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option />
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`appends extra classes 1`] = `
<div
  className="input append me select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`can hide the label 1`] = `
<div
  className="input select_e8htpf"
>
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`has active state 1`] = `
<div
  className="input input--active select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`has error state 1`] = `
<div
  className="input input--alert select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`has focused state 1`] = `
<div
  className="input input--focused select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`includes blank 1`] = `
<div
  className="input select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option
      style={
        Object {
          "display": "none",
        }
      }
    />
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`includes placeholder 1`] = `
<div
  className="input select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myPlaceholder"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option
      style={
        Object {
          "display": "none",
        }
      }
    >
      myPlaceholder
    </option>
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`is active if selected prop 1`] = `
<div
  className="input input--active select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
    value="2"
  >
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`overrides with theme if present 1`] = `
<div
  className="override select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`renderHepText returns when error and error text 1`] = `
<span
  className="input__status"
>
  error
</span>
`;

exports[`renderHepText returns when status 1`] = `
<span
  className="input__status"
>
  some status
</span>
`;

exports[`renders with props 1`] = `
<div
  className="input select_e8htpf"
>
  <Label
    labelFor="2"
    labelName="myLabel"
  />
  <select
    className="input classes"
    id="2"
    name="myName"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="myLabel"
    style={
      Object {
        "color": "green",
      }
    }
  >
    <option
      className="one two"
      value="1"
    >
      1
    </option>
    <option
      className="one two"
      value="2"
    >
      2
    </option>
  </select>
</div>
`;
